--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
-    "axios": "^1.3.4",
+    "axios": "^1.6.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.2.6",
-    "openai": "^4.5.0"
+    "openai": "^4.5.0",
+    "xml2js": "^0.6.2"
   }
 }
